--- a/material-rating-lib/build.gradle
+++ b/material-rating-lib/build.gradle
@@ -1,15 +1,16 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
     defaultConfig {
-        applicationId "com.vimalcvs.myrateapp"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 2
         versionName "1.0.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -17,9 +18,9 @@ android {
         }
     }
 }
+
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
-    implementation project(':material-rating-lib')
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
