--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,13 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.2"
+        classpath 'com.android.tools.build:gradle:7.1.1'
     }
 }
-allprojects {
-    repositories {
-        google()
-        jcenter()
-    }
-}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
