--- a/material-rating-lib/src/main/AndroidManifest.xml
+++ b/material-rating-lib/src/main/AndroidManifest.xml
@@ -1,3 +1,2 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.vimalcvs.materialratinglib">
+<manifest package="com.vimalcvs.materialratinglib">
 </manifest>
