--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,22 +1,31 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+}
 android {
-    compileSdkVersion 32
+    compileSdk 32
     defaultConfig {
-        applicationId "com.playtubevideo.floatingtubevideoplayer"
-        minSdkVersion 16
-        targetSdkVersion 32
-        versionCode 2
-        versionName "1.0.5"
+        applicationId "com.vimalcvs.ratingapp"
+        minSdk 16
+        targetSdk 32
+        versionCode 3
+        versionName "3.0.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
-    implementation project(':material-rating-lib')
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation project(path: ':material-rating-lib')
 }
