--- a/material-rating-lib/build.gradle
+++ b/material-rating-lib/build.gradle
@@ -1,19 +1,26 @@
-apply plugin: 'com.android.library'
+plugins {
+    id 'com.android.library'
+}
 android {
-    compileSdkVersion 32
+    compileSdk 32
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 32
-        versionCode 2
-        versionName "1.0.5"
+        minSdk 16
+        targetSdk 32
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 dependencies {
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
 }
