--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,5 @@ android {
 
 dependencies {
     implementation 'com.google.android.material:material:1.8.0-alpha01'
-    implementation project(':material-rating-lib')
+    implementation project(':rating-library')
 }
