--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 android {
     compileSdk 32
     defaultConfig {
-        applicationId "com.vimalcvs.myrateapp"
+        applicationId "com.vimalcvs.myapplication"
         minSdk 21
         targetSdk 32
         versionCode 1
