--- a/rating-library/src/main/AndroidManifest.xml
+++ b/rating-library/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
-<manifest package="com.vimalcvs.materialratinglib">
-
+<manifest package="com.vimalcvs.materialrating">
+    <application/>
 </manifest>
