--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
     defaultConfig {
         applicationId "com.vimalcvs.myapplication"
-        minSdk 21
-        targetSdk 32
+        minSdk 19
+        targetSdk 33
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -26,6 +26,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.google.android.material:material:1.8.0-alpha01'
+
+    implementation 'com.google.android.material:material:1.8.0'
     implementation project(':rating-library')
+
 }
